@@ -6,6 +6,9 @@ versions of Red5.
 
 Red5 0.5    (unreleased)
 ------------------------
+New features:
+- frame dropping for live streams depending on available bandwidth
+
 Bugfixes:
 - only the same instances are serialized as references (Trac #58)
 - re-added JSP support in manifest file of red5.jar (Trac #59)
